added font styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<div class="input">
 				<label for="assignmentNumberInput">Assignment Number:</label>
-				<input id='assignmentNumberInput' type="number" placeholder="1" value="">
+				<input id='assignmentNumberInput' type="number" placeholder="" value="">
 			</div>
 
 			<div class="input">
