added github link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<div class="input">
 				<label for="assignmentNumberInput">Assignment Number:</label>
-				<input id='assignmentNumberInput' type="number" placeholder="" value="">
+				<input id='assignmentNumberInput' type="number" value="">
 			</div>
 
 			<div class="input">
@@ -40,7 +40,10 @@
 			</div>
 
 			<button id='submitButton'>Format Assignment</button>
-
+			<div id="githubLinkWrapper">
+				<span>Source on</span>
+				<a href="https://github.com/Flying-Toast/assignmentFormatter" id="githubLink" target="_blank">GitHub</a>
+			</div>
 		</div>
 
 		<script src='js/formatCode.js'></script>
