change assignment number input to "text" to allow assignment numbers such as "3b"

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 				<div class="input">
 					<label for="assignmentNumberInput">Assignment #</label>
-					<input id='assignmentNumberInput' type="number" value="">
+					<input id='assignmentNumberInput' type="text" value="">
 				</div>
 
 				<div class="input">
