--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
 				left: 50%;
 				transform: translateY(-50%) translateX(-50%);
 			}
+			#loadingDiv {
+				text-align: center;
+				font-size: 20px;
+				margin-top: 20px;
+				display: none;
+			}
+			#loadingDiv::after {
+				content: '';
+				animation-duration: 1s;
+				animation-iteration-count: infinite;
+				animation-name: loading;
+			}
+
+			@keyframes loading {
+				30% {
+					content: '.';
+				}
+				60% {
+					content: '..';
+				}
+				90% {
+					content: '...';
+				}
+			}
 		</style>
 	</head>
 	<body>
@@ -125,6 +149,7 @@
 				<div class="centerChildren">
 					<button id='submitButton'>Format Assignment</button>
 				</div>
+				<div id="loadingDiv">Loading</div>
 
 			</div>
 
