launch confetti + play party horn when done formattining, replaced "Source on github" link with github logo

--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 			</div>
 
 			<div id="githubLink">
-				<span>Source on</span>
-				<a href="https://github.com/Flying-Toast/assignmentFormatter" target="_blank">GitHub</a>
+				<a href="https://github.com/Flying-Toast/assignmentFormatter" target="_blank"><img src="media/images/githubLogo.svg" alt="Source on GitHub"></a>
 			</div>
 		</div>
 		<script src='js/formatCode.js'></script>
