move github link to bottom of page

--- a/website/index.html
+++ b/website/index.html
@@ -58,9 +58,10 @@
 				width: 20ch;
 			}
 
-			#githubLink {
-				margin-top: 10px;
-				text-align: right;
+			#githubLink, #githubIcon {
+				position: absolute;
+				bottom: 0;
+				right: 0;
 			}
 
 			button {
@@ -151,17 +152,16 @@
 				<div class="centerChildren">
 					<button id='submitButton'>Format Assignment</button>
 				</div>
+
 				<div id="loadingDiv">Loading</div>
 
 			</div>
 
 			<div id="useExtension">Using Firefox? Try the <a href="https://addons.mozilla.org/en-US/firefox/addon/assignment-formatter/">browser extension</a> - it's much faster.</div>
 			<div id="useDesktop">There is also a <a id="downloadLink" href="https://github.com/Flying-Toast/assignmentFormatter/releases/download/v1.0.0/AssignmentFormatter-macOSX.zip">desktop app</a> if you didn't use paiza.</div>
-
-			<div id="githubLink">
-				<a href="https://github.com/Flying-Toast/assignmentFormatter" target="_blank"><img src="media/images/githubLogo.svg" alt="Source on GitHub"></a>
-			</div>
 		</div>
+
+		<a id="githubLink" href="https://github.com/Flying-Toast/assignmentFormatter" target="_blank"><img id="githubIcon" src="media/images/githubLogo.svg" alt="Source on GitHub"></a>
 
 		<script>
 			if (navigator.userAgent.toLowerCase().includes("linux") || navigator.userAgent.toLowerCase().includes("mac")) {
