--- a/website/index.html
+++ b/website/index.html
@@ -112,7 +112,7 @@
 				}
 			}
 
-			#useExtension, #useDesktop {
+			#useExtension {
 				display: none;
 			}
 		</style>
@@ -158,17 +158,10 @@
 				<a id="githubLink" href="https://github.com/Flying-Toast/assignmentFormatter" target="_blank"><img id="githubIcon" src="media/images/githubLogo.svg" alt="Source on GitHub"></a>
 			</div>
 
-			<div id="useExtension">Using Firefox? Try the <a href="https://addons.mozilla.org/en-US/firefox/addon/assignment-formatter/">browser extension</a> - it's much faster.</div>
-			<div id="useDesktop">There is also a <a id="downloadLink" href="https://github.com/Flying-Toast/assignmentFormatter/releases/download/v1.0.0/AssignmentFormatter-macOSX.zip">desktop app</a> if you didn't use paiza.</div>
+			<div id="useExtension">Using Firefox? The <a href="https://addons.mozilla.org/en-US/firefox/addon/assignment-formatter/">browser extension</a> is much faster.</div>
 		</div>
 
 		<script>
-			if (navigator.userAgent.toLowerCase().includes("linux") || navigator.userAgent.toLowerCase().includes("mac")) {
-				if (navigator.userAgent.toLowerCase().includes("linux")) {
-					document.querySelector("#downloadLink").href = "https://github.com/Flying-Toast/assignmentFormatter/releases/download/v1.0.0/AssignmentFormatter-linux-x64.zip";
-				}
-				document.querySelector('#useDesktop').style.display = "block";
-			}
 			if (navigator.userAgent.toLowerCase().includes("firefox")) {
 				document.querySelector('#useExtension').style.display = "block";
 			}
