remove '#' from HTML

--- a/website/index.html
+++ b/website/index.html
@@ -140,7 +140,7 @@
 				</div>
 
 				<div class="input">
-					<label for="assignmentNumberInput">Assignment #</label>
+					<label for="assignmentNumberInput">Assignment</label>
 					<input id='assignmentNumberInput' type="text" value="">
 				</div>
 
