prepare for major refactoring

--- a/website/index.html
+++ b/website/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<meta charset="utf-8">
-		<script src="js/libs.js"></script>
+		<script src="js/pdfmake.js"></script>
 		<script src="js/vfs_fonts.js"></script>
+		<script src="js/providers.js"></script>
 		<link rel="stylesheet" href="media/fonts/fonts.css">
 		<link rel="stylesheet" href="style.css">
 		<title>Programming Homework Formatter</title>
@@ -51,6 +52,6 @@
 			</div>
 		</div>
 
-		<script src='js/formatCode.js'></script>
+		<script src='js/main.js'></script>
 	</body>
 </html>
