refactor html+css

--- a/website/index.html
+++ b/website/index.html
@@ -12,11 +12,10 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<div id='form'>
-
+			<div id="form">
 				<div class="input">
 					<label for="nameInput">Name</label>
-					<input type="text" id="nameInput" placeholder="Firstname Lastname" value="">
+					<input type="text" id="nameInput" placeholder="Firstname Lastname">
 				</div>
 
 				<div class="input">
@@ -34,24 +33,24 @@
 
 				<div class="input">
 					<label for="assignmentNumberInput">Assignment</label>
-					<input id='assignmentNumberInput' type="text" value="">
+					<input id="assignmentNumberInput" type="text">
 				</div>
 
 				<div class="input">
 					<label for="urlInput">Paiza.io URL</label>
-					<input id='urlInput' type="text" placeholder="https://paiza.io/projects/xxxx" value="">
+					<input id="urlInput" type="text" placeholder="https://paiza.io/projects/xxxx">
 				</div>
 
 				<div class="centerChildren">
-					<button id='submitButton'>Format Assignment</button>
+					<button id="submitButton">Format Assignment</button>
 				</div>
 
 				<div id="loadingDiv">Loading</div>
 
-				<a id="githubLink" href="https://github.com/Flying-Toast/assignmentFormatter" target="_blank"><img id="githubIcon" src="media/images/githubLogo.svg" alt="Source on GitHub"></a>
+				<a id="githubLink" href="https://github.com/Flying-Toast/assignmentFormatter"><img id="githubIcon" src="media/images/githubLogo.svg" alt="Source on GitHub"></a>
 			</div>
 		</div>
 
-		<script src='js/main.js'></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
