all libraries in one file

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<meta charset="utf-8">
-		<script src="js/pdfmake.js"></script>
+		<script src="js/libs.min.js"></script>
 		<script src="js/vfs_fonts.js"></script>
 		<script src="js/providers.js"></script>
 		<link rel="stylesheet" href="media/fonts/fonts.css">
